Add API skeleton which generates OpenAPI specification
